# hackathon_wallet

./: .gitignore  README.md  nuxt.config.js  package-lock.json  package.json
assets/css/: bootstrap.min.css  style.css
components/Main/: Capsule.vue  ItemTransaction.vue  Sidebar.vue  Stats.vue  Transaction.vue  Transactions.vue  appHeader.vue
components/Modals/: SendModal.vue  TemplateModal.vue  TransactionModal.vue  WithdrawModal.vue
components/Settings/: Capsule.vue  Profile.vue  appHeader.vue
fluence/browser_service_stable/: package-lock.json  package.json
fluence/browser_service_stable/aqua/: export.aqua  node.aqua
fluence/browser_service_stable/src/: index.ts  logic.ts  test.ts
fluence/hosted_service_approach/: Config.toml  build.sh  readme.md
fluence/hosted_service_approach/configs/: facade_cfg.json
fluence/hosted_service_approach/facade/: Cargo.toml
fluence/hosted_service_approach/facade/src/: crud.rs  crypto.rs  main.rs
pages/: index.vue
pages/Settings/: index.vue
pages/Transactions/: index.vue
plugins/: bootstrap-vue.js  vue-ionicons.js
store/: index.js
store/page/: actions.js  index.js  mutations.js
