[package]
name = "facade"
version = "0.1.0"
authors = ["alfa"]
edition = "2018"
publish = false


[[bin]]
name = "facade"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.118", features = ["derive"] }
serde_json = "1.0.64"
marine-rs-sdk = { version = "=0.6.15", features = ["logger"] }
log = "0.4.8"
chrono = "0.4.19"
marine-sqlite-connector = "0.5.2"
ethers = { git = "https://github.com/gakonst/ethers-rs" }